--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.14",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
-    "react-hotkeys": "^2.0.0",
     "shortid": "^2.2.14"
   },
   "devDependencies": {
