--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
 		"eslint-plugin-standard": "^4.0.0",
 		"gh-pages": "^2.0.1",
 		"node-sass": "^4.12.0",
+		"postcss-inline-svg": "^4.1.0",
+		"postcss-svgo": "^4.0.2",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-scripts": "^3.0.1",
