--- a/example/package.json
+++ b/example/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1",
-    "react-alignment-guides": "link:.."
+    "react": "^16.13.1",
+    "react-alignment-guides": "link:..",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
