--- a/package.json
+++ b/package.json
@@ -37,36 +37,31 @@
 		"react-dom": "^15.0.0 || ^16.0.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.8.4",
-		"@babel/core": "^7.9.0",
 		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/plugin-proposal-export-default-from": "^7.8.3",
 		"@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-		"@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+		"@babel/plugin-proposal-object-rest-spread": "^7.20.7",
 		"@babel/preset-env": "^7.22.10",
 		"@babel/preset-react": "^7.9.4",
+		"@rollup/plugin-commonjs": "^22.0.2",
+		"@rollup/plugin-node-resolve": "^13.0.6",
 		"@svgr/rollup": "^8.1.0",
 		"bl": "^4.0.2",
 		"cross-env": "^7.0.2",
 		"eslint-config-standard": "^14.1.1",
 		"eslint-config-standard-react": "^9.2.0",
 		"eslint-plugin-import": "^2.20.2",
-		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.19.0",
 		"eslint-plugin-standard": "^4.0.1",
 		"gh-pages": "^2.2.0",
-		"node-sass": "^9.0.0",
+		"postcss": "^8.4.28",
 		"postcss-inline-svg": "^6.0.0",
 		"postcss-svgo": "^6.0.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-scripts": "^5.0.1",
 		"rollup": "^2.3.4",
 		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-node-builtins": "^2.1.2",
-		"rollup-plugin-node-resolve": "^5.2.0",
+		"rollup-plugin-node-polyfills": "^0.2.1",
 		"rollup-plugin-peer-deps-external": "^2.2.2",
 		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-url": "^3.0.1",
@@ -76,7 +71,10 @@
 		"dist"
 	],
 	"dependencies": {
+		"@babel/core": "^7.22.10",
+		"@rollup/plugin-replace": "^5.0.2",
 		"lodash.debounce": "^4.0.8",
-		"lodash.throttle": "^4.1.1"
+		"lodash.throttle": "^4.1.1",
+		"sass": "^1.65.1"
 	}
 }
